@@ -1,3 +1,8 @@
+2006-08-03  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>
+
+	* nsproxy/nsproxylib.c: Define 30 seconds grace period
+	to wait for proxies cleanup on application exit.
+
 2006-08-02  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>
 
 	* nsproxy/nsproxylib.c: Set pipes in the child proxy to
